[package]
name = "encryptor"
version = "0.1.0"
authors = ["Aibek <futuramacoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.24"
pem = "0.4"
base64 = "0.10.1"
rand = "0.5.0"
jsonrpc-core = "13.1.0"
jsonrpc-http-server = "13.1.0"
jsonrpc-core-client = "13.1.0"
serde_derive = "1.0"
serde = "1.0"
regex = "1.2.1"
lazy_static = "1.4.0"
dotenv = "0.14.1"
